<resources>
    <string name="app_name">appConvert</string>
    <string name="txt_saludo">Bienvenido!!</string>
    <string name="edt_username">User</string>
    <string name="edt_password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="txt_regis">Registrar</string>
    <string name="txt_registro">No te has registrado? Regístrate ahora</string>
    <string name="txt_Bienvenida">Bienvenido!!!</string>
    <string name="btn_Longitud">Longitud</string>
    <string name="btn_Volumen">Volumen</string>
    <string name="btn_Masa">Masa</string>
    <string name="btn_Area">Área</string>
    <string name="btn_Velocidad">Área</string>
    <string name="txt_Nombre">Nombre</string>


    /*General */
    <string name="txt_result">Resultado</string>

    /*activiti long */
    <string name="edt_txt_PrimerValor">Valor</string>
    <string name="btn_Convertir">Convertir</string>
    <string name="edt_valor">Ingresa un valor</string>

    /*Item del menu */
    <string name="itemLong">Longitud</string>
    <string name="itemVol">Volumen</string>
    <string name="itemMasa">Masa</string>
    <string name="itemArea">Area</string>

    /*Registro */
    <string name="txt_name">name</string>
    <string name="txt_email">email</string>
    <string name="txt_password">password</string>
    <string name="btn_registro">Registrar</string>
</resources>