<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView"
    android:background="@drawable/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">


    <TextView
        android:id="@+id/idTxtSal"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_Bienvenida"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTxtNombre"
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_Nombre"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtSal" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="304dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtNombre"
        app:layout_constraintVertical_bias="0.516">


        <Button
            android:id="@+id/btnLongitud"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="abrirLongitud"
            android:text="@string/btn_Longitud"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnVolumen"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="abrirVolumen"
            android:text="@string/btn_Volumen"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnMasa"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="abrirMasa"
            android:text="@string/btn_Masa"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnArea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="abrirArea"
            android:text="@string/btn_Area"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>